--- a/app/src/main/res/drawable/area_one.xml
+++ b/app/src/main/res/drawable/area_one.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="@color/black_overlay" />
             <corners android:radius="7dp" />
         </shape>
     </item>
