--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-
+    <color name='yellow'>#FFFF00</color>
     <color name="black_overlay">#66000000</color>
 </resources>
