--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -5,13 +5,10 @@
     tools:context="com.yuanzhihao.roboticsclub.AddUserActivity"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/activity_toolbar"
+    <FrameLayout
+        android:id="@+id/user_information"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:title="@string/app_name"/>
-
+        android:layout_height="0dp"
+        android:layout_weight="1"></FrameLayout>
 
 </LinearLayout>
